<!-- Mark Cottrell S1627662 -->
<resources>
    <string name="app_name">mpd_assignment</string>
    <string name="left_button">Left Button</string>
    <string name="middle_button">Middle Button</string>
    <string name="right_button">Right Button</string>
    <string name="Open">Open main menu</string>
    <string name="Close">Close main menu</string>
    <string name="map_show_incidents">Map - Show Incidents</string>
    <string name="map_show_roadworks">Map - Show Roadworks</string>
    <string name="map_show_planned_roadworks">Map - Show Planned Roadworks</string>
    <string name="map_follow_me">Map - Follow Me</string>
    <string name="view_incidents">View Incidents</string>
    <string name="view_roadworks">View Roadworks</string>
    <string name="view_planned_roadworks">View Planned Roadworks</string>
    <string name="back">Back\nTo Map</string>
    <string name="planned_roadworks">Planned\nRoadworks</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="or">Or</string>
    <string name="place_name">Place name</string>
    <string name="roadworks">Roadworks</string>
    <string name="view_map">View Map</string>
    <string name="journey_planner">Journey Planner</string>
    <string name="API_key">AIzaSyCc8iFpI-QMaF328yHb4lJETzeRc7eFSps</string>
    <string name="start_nlocation">Start\nLocation</string>
    <string name="end_nlocation">End\nLocation</string>
    <string name="travel_ndate">Travel\nDate</string>
    <string name="new_njourney">New\nJourney</string>
    <string name="back_n">Back\n</string>
    <string name="create_njourney">Create\nJourney</string>
    <string name="reset_n">Reset\n</string>
    <string name="save_njourney">Save\nJourney</string>
    <string name="end_loc_hint">End Location</string>
    <string name="start_loc_hint">Start Location</string>
    <string name="show_search">Show Search</string>
    <string name="reset_results">Reset Results</string>
    <string name="latitude_">Latitude…</string>
    <string name="longitude_">Longitude…</string>
    <string name="within_miles">Within * Miles</string>
    <string name="search_lat_long">Search Lat/Long</string>
    <string name="_place_name">Place name…</string>
    <string name="within_miles_">Within * Miles</string>
    <string name="search_place">Search Place</string>
    <string name="roadworks_icon">roadworks icon</string>
    <string name="loc_place">Location/Place</string>
    <string name="enter_lng">Enter Longitude</string>
    <string name="enter_lat">Enter Latitude</string>
    <string name="logo">logo</string>
    <string name="main_logo">Main Logo</string>
    <string name="save_journey">Save Journey</string>
    <string name="journey_nname">Journey\nName</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="enter_save_name">Enter Save Name</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="no_saved_journey">No saved journeys to display</string>
    <string name="no_planned_roadworks">No Planned Roadworks to display</string>
    <string name="no_roadworks">No Roadworks to display</string>
    <string name="n_incidents">No Incidents to display</string>
    <string name="done">Done</string>
    <string name="loading_plan">Loading Planned Roadworks</string>
    <string name="loading_road">Loading Roadworks</string>
    <string name="starting">Starting app...</string>
    <string name="loading_inc">Loading Incidents</string>
    <string name="end_not_found">End location not found</string>
    <string name="start_not_found">Start location not found</string>
    <string name="niether_found">Start and End Location not found</string>
    <string name="end_must">End location must be completed</string>
    <string name="start_must">Start location must be completed</string>
    <string name="both_must">Both fields must be completed</string>
    <string name="hide_search">Hide Search</string>
    <string name="need_place">Need to enter a place</string>
    <string name="no_address_found">No address found for:</string>
    <string name="dist">Distance:</string>
    <string name="error_lat_lng">Error in latitude /longitude</string>
    <string name="error_in_lat">Error in latitude /longitude</string>
    <string name="need_both_fields">Need to enter both fields</string>
    <string name="cant_comma">Can\'t use comma in latitude/longitude</string>
    <string name="road_">Roadworks</string>
    <string name="inc_">Incidents</string>
    <string-array name="miles_array">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
    </string-array>
</resources>
