<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentGroup"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/show_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <Button
        android:id="@+id/resetView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/reset_results"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageIcon" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/latitude"
                app:layout_constraintBottom_toBottomOf="@+id/editLat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editLat" />

            <EditText
                android:id="@+id/editLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_lat"
                android:hint="@string/latitude_"
                android:inputType="number|numberDecimal|numberSigned"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textLng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/longitude"
                app:layout_constraintBottom_toBottomOf="@+id/editLng"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editLng" />

            <EditText
                android:id="@+id/editLng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_lng"
                android:hint="@string/longitude_"
                android:inputType="number|numberDecimal|numberSigned"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/editLat" />

            <TextView
                android:id="@+id/textLatLongMiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/within_miles"
                app:layout_constraintBottom_toBottomOf="@+id/spinnerLatLongMiles"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinnerLatLongMiles" />

            <Spinner
                android:id="@+id/spinnerLatLongMiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/editLng" />

            <TextView
                android:id="@+id/textErrorLatLong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/red"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerLatLongMiles" />

            <Button
                android:id="@+id/latLongButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_lat_long"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textErrorLatLong" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_begin="265dp"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/searchPlaceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_place"
                app:layout_constraintBottom_toBottomOf="@+id/latLongButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/latLongButton" />

            <TextView
                android:id="@+id/textMiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/within_miles_"
                app:layout_constraintBottom_toBottomOf="@+id/spinnerMiles"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/spinnerMiles" />

            <TextView
                android:id="@+id/textPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/place_name"
                app:layout_constraintBottom_toBottomOf="@+id/editPlace"
                app:layout_constraintStart_toEndOf="@+id/editLat"
                app:layout_constraintTop_toTopOf="@+id/editPlace" />

            <EditText
                android:id="@+id/editPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/loc_place"
                android:ems="8"
                android:hint="@string/_place_name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinnerMiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPlace" />

            <TextView
                android:id="@+id/textErrorPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text=""
                android:textColor="@color/red"
                app:layout_constraintBottom_toTopOf="@+id/searchPlaceButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="160dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:text="@string/roadworks"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageIcon"
        app:layout_constraintStart_toEndOf="@+id/imageIcon"
        app:layout_constraintTop_toTopOf="@+id/imageIcon" />

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roadworksicon"
        android:contentDescription="@string/roadworks_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>